--- a/src/app/template/home/home.component.css
+++ b/src/app/template/home/home.component.css
@@ -191,8 +191,7 @@ main {
 }
 
 .content-top {
-    max-width: 1080px;
-    margin-left: 10px;
+    width: 100%;
     display: grid;
     grid-template-columns: 50% 50%;
     justify-content: center;
@@ -200,18 +199,22 @@ main {
 }
 
 .content-news1 {
-    max-width: 500px;
-    margin: 20px;
-    height: 500px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    width: 530px;
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
     background-color: white;
     border: none;
+    width: 530px;
 }
 
 .picture {
-    max-width: 1200px;
+    max-width: 600px;
     border-radius: 5px;
 }
 
@@ -228,7 +231,7 @@ main {
 
 /* Responsive CSS*/
 
-@media screen and ( max-width:1095px) {
+@media screen and ( max-width:1147px) {
     .header>ul {
         display: none;
     }
@@ -244,5 +247,29 @@ main {
         max-width: 100%;
         height: 1200px;
         border-radius: 0px;
+    }
+    .nav-content ul ul {
+        z-index: 1;
+    }
+    .nav-content ul ul .dropdown {
+        z-index: 1;
+    }
+}
+
+@media screen and ( max-width:1134px) {
+    .content-top {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .content-news1 {
+        width: 100%;
+        margin-right: 10px;
+        border: none;
+    }
+    .card {
+        width: 100%;
+    }
+    .picture {
+        max-width: 100%;
     }
 }
