--- a/src/app/template/home/home.component.html
+++ b/src/app/template/home/home.component.html
@@ -22,7 +22,7 @@
             </li>
         </ul>
         <div class="search">
-            <input type="text" name="" id="">
+            <input type="text" name="" placeholder="Ex: NC 500">
             <button>Buscar</button>
         </div>
     </section>
@@ -56,10 +56,10 @@
 
     <main>
         <section class="body-content">
-
             <section class="content-top">
 
                 <div class="content-news1 n1">
+
                     <div class="card">
                         <img class="picture" src="assets\warnner-image-news\jogo-de-luta.jpg" alt="">
                         <div class="card-content">
@@ -69,9 +69,11 @@
                             </h3>
                         </div>
                     </div>
+
                 </div>
 
                 <div class="content-news1">
+
                     <div class="card">
                         <img class="picture" src="assets\sony-image-news\playstation.jpg" alt="">
                         <div class="card-content">
@@ -81,7 +83,53 @@
                             </h3>
                         </div>
                     </div>
+
                 </div>
+
+            </section>
+
+            <section class="content-news2">
+                <ul>
+                    <li>
+                        <h2>Frases Marcantes de Filmes e Séries em 2021</h2>
+                    </li>
+                    <section class="middle-content">
+
+                        <div class="card middlecard1">
+                            <img src="assets\img\news1.jpg" alt="imagem-noticia">
+                            <div class="card-content">
+                                <h4>HISTÓRIA SENSÍVEL</h4>
+                                <h3>Tamo Junto é uma animação brasileira sobre a pandemia</h3>
+                            </div>
+                        </div>
+
+                        <div class="card middlecard2">
+                            <img src="assets\img\news2.jpg" alt="imagem-noticia">
+                            <div class="card-content">
+                                <h4>PAPEL NÃO FOI CONFIRMADO</h4>
+                                <h3>Delroy Lindo entra para o elenco de Blade</h3>
+                            </div>
+                        </div>
+
+                        <div class="card middlecard3">
+                            <img src="assets\img\news3.jpg" alt="imagem-noticia">
+                            <div class="card-content">
+                                <h4>POTÊNCIA CINEMATOGRÁFICA</h4>
+                                <h3>Você sabe o que é Nollywood?</h3>
+                            </div>
+                        </div>
+
+                        <div class="card middlecard4">
+                            <img src="assets\img\news4.jpg" alt="imagem-noticia">
+                            <div class="card-content">
+                                <h4 style="color: rgb(157, 81, 228);">PURA FOFURA</h4>
+                                <h3>Assista ao especial de Cowboy Bebop com erros de gravação do Ein
+                                </h3>
+                            </div>
+                        </div>
+
+                    </section>
+                </ul>
 
             </section>
 
