--- a/src/app/template/home/home.component.css
+++ b/src/app/template/home/home.component.css
@@ -1,7 +1,6 @@
-.global {
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
+body {
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -45,12 +44,18 @@
 }
 
 .header input {
+    padding: 18px;
     width: 280px;
     border-radius: 20px;
     border: none;
-    height: 38px;
+    height: 28px;
     background-color: #1e1e26;
     border: 1px solid white;
+}
+
+.header input::placeholder {
+    font-weight: 900;
+    margin-left: 20px;
 }
 
 .header button {
@@ -185,8 +190,7 @@ main {
 .body-content {
     margin-top: 300px;
     width: 1100px;
-    height: 1200px;
-    background-color: #fdfdfd;
+    background-color: white;
     border-radius: 5px;
 }
 
@@ -226,6 +230,27 @@ main {
 .card-content h3 {
     font-size: 1.8rem;
     font-weight: 500;
+}
+
+
+/*Midle Content*/
+
+.middle-content {
+    display: grid;
+    grid-template-columns: 410px 200px;
+}
+
+.content-news2 h2 {
+    margin-top: 20px;
+}
+
+.middle-content>.card {
+    width: 400px;
+    padding: 20px 10px 0px 0px;
+}
+
+.middle-content>.card>img {
+    border-radius: 8px;
 }
 
 
@@ -271,5 +296,22 @@ main {
     }
     .picture {
         max-width: 100%;
+    }
+}
+
+@media screen and ( max-width: 840px) {
+    body {
+        width: 100vh;
+    }
+    .nav-content {
+        display: none;
+    }
+    .middle-content {
+        display: flex;
+        flex-direction: column;
+    }
+    .middle-content>.card {
+        width: 580px;
+        padding: 20px 0px 0px 0px;
     }
 }
