--- a/src/app/template/home/home.component.html
+++ b/src/app/template/home/home.component.html
@@ -61,11 +61,11 @@
                 <div class="content-news1 n1">
 
                     <div class="card">
-                        <img class="picture" src="assets\warnner-image-news\jogo-de-luta.jpg" alt="">
+                        <img class="picture" src="assets\marvel-image-news\eternos-shang-chi.png" alt="shang chi e eternos">
                         <div class="card-content">
-                            <h4>O MEME É REAL</h4>
+                            <h4>NERDCAST</h4>
                             <h3>
-                                Warner anuncia MultVersus, jogos de luta gratuito com Arya Stark, Batman, Salsicha e mais
+                                Eternos e Shang-Chi: Imortais são babacas!
                             </h3>
                         </div>
                     </div>
