--- a/src/app/template/home/home.component.css
+++ b/src/app/template/home/home.component.css
@@ -7,7 +7,7 @@ body {
 /*Header CSS*/
 
 .header {
-    max-width: 100%;
+    width: 100%;
     height: 135px;
     display: flex;
     flex-direction: row;
@@ -127,6 +127,7 @@ body {
     position: absolute;
     min-width: 220px;
     display: none;
+    z-index: 1;
 }
 
 .nav-content ul ul li {
@@ -147,6 +148,7 @@ body {
 
 .nav-content ul ul li .dropdown>i {
     font-size: 10px;
+    z-index: 1;
 }
 
 .nav-content ul li i {
@@ -181,17 +183,18 @@ body {
 /* Main Content CSS*/
 
 main {
-    background-image: url(src\assets\img\backgroundImage.png);
     display: flex;
     justify-content: center;
     width: 100%;
+    background-color: #111115f1;
 }
 
 .body-content {
-    margin-top: 300px;
+    margin-top: 100px;
     width: 1100px;
     background-color: white;
-    border-radius: 5px;
+    border-radius: 10px;
+    margin-bottom: 30px;
 }
 
 .content-top {
@@ -272,12 +275,6 @@ main {
         max-width: 100%;
         height: 1200px;
         border-radius: 0px;
-    }
-    .nav-content ul ul {
-        z-index: 1;
-    }
-    .nav-content ul ul .dropdown {
-        z-index: 1;
     }
 }
 
