--- a/src/app/header-components/nerdcast/nerdcast.component.css
+++ b/src/app/header-components/nerdcast/nerdcast.component.css
@@ -1,11 +1,3 @@
-body {
-    width: 100%;
-    height: 100%;
-}
-
-
-/* Main Content CSS*/
-
 main {
     display: flex;
     justify-content: center;
@@ -16,6 +8,7 @@ main {
     margin-top: 100px;
     width: 1100px;
     background-color: white;
+    border-radius: 10px;
     margin-bottom: 30px;
 }
 
@@ -61,13 +54,26 @@ main {
 /*Midle Content*/
 
 .middle-content {
-    display: grid;
-    grid-template-columns: 410px 200px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.content-news2 {
+    margin-top: 50px;
+}
+
+.content-news2 .card {
+    border-radius: 0px;
+}
+
+.content-news2 ul {
+    padding: 0;
+    margin-left: 10px;
 }
 
 .content-news2 h2 {
     margin-top: 20px;
-    color: rgb(106, 106, 106);
 }
 
 .middle-content>.card {
@@ -83,10 +89,10 @@ main {
 /* Responsive CSS*/
 
 @media screen and ( max-width:1147px) {
-    /*Main CSS Responsive*/
     .body-content {
         margin-top: 0px;
         max-width: 100%;
+        height: 1200px;
         border-radius: 0px;
     }
 }
@@ -112,6 +118,9 @@ main {
 @media screen and ( max-width: 840px) {
     body {
         width: 100vh;
+    }
+    .nav-content {
+        display: none;
     }
     .middle-content {
         display: flex;
