--- a/src/app/header-components/nerdcast/nerdcast.component.html
+++ b/src/app/header-components/nerdcast/nerdcast.component.html
@@ -4,8 +4,16 @@
 
         <section class="body-content">
 
-            <section class="content-top">
+            <div class="title">
+                <h1>NerdCast</h1>
+                <div class="button">
+                    <input type="text" placeholder="  Pesquise NerdCast...">
+                    <button>Buscar</button>
+                </div>
+            </div>
 
+            <h2>Últimos episódios</h2>
+            <section class="content-top">
                 <div class="content-news1 n1">
                     <div class="card">
                         <img class="picture" src="assets\nerdCast\cantar-cast.jpg" alt="imagem-cantando">
