--- a/src/app/header-components/nerdcast/nerdcast.component.css
+++ b/src/app/header-components/nerdcast/nerdcast.component.css
@@ -2,14 +2,59 @@ main {
     display: flex;
     justify-content: center;
     width: 100%;
+    background-color: rgb(38, 39, 46);
 }
 
 .body-content {
+    padding: 30px;
     margin-top: 100px;
-    width: 1100px;
+    width: 1300px;
     background-color: white;
     border-radius: 10px;
     margin-bottom: 30px;
+}
+
+.title {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.title>h1 {
+    color: black;
+    font-weight: 900;
+    font-size: 2.8rem;
+}
+
+.button {
+    position: relative;
+}
+
+.button input {
+    border-radius: 20px;
+    border: none;
+    width: 350px;
+    padding: 3px;
+    background-color: rgba(203, 212, 223, 0.468);
+}
+
+.button button {
+    border-radius: 20px;
+    position: absolute;
+    right: 3px;
+    top: 3px;
+    border: none;
+    color: white;
+    font-weight: 900;
+    background-color: rgb(39, 176, 139);
+    width: 80px;
+}
+
+.body-content>h2 {
+    font-size: 30px;
+    color: rgb(39, 176, 139);
+    text-decoration: 2px underline;
+    margin-top: 40px;
 }
 
 .content-top {
@@ -17,7 +62,7 @@ main {
     display: grid;
     grid-template-columns: 50% 50%;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 30px;
 }
 
 .content-news1 {
@@ -88,12 +133,16 @@ main {
 
 /* Responsive CSS*/
 
-@media screen and ( max-width:1147px) {
+@media screen and ( max-width:1271px) {
     .body-content {
         margin-top: 0px;
         max-width: 100%;
         height: 1200px;
         border-radius: 0px;
+    }
+    .title {
+        margin-top: 80px;
+        padding: 0px 20px 0px 0px;
     }
 }
 
