--- a/src/app/template/home/home.component.css
+++ b/src/app/template/home/home.component.css
@@ -10,13 +10,15 @@ main {
     display: flex;
     justify-content: center;
     width: 100%;
+    background-color: rgb(38, 39, 46);
 }
 
 .body-content {
     margin-top: 100px;
     width: 1100px;
-    background-color: white;
     margin-bottom: 30px;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .content-top {
