add-new-component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
                 <a routerLink="nerdCast">NerdCast</a>
             </li>
             <li>
-                <a href="">NerdOffice</a>
+                <a routerLink="nerdOffcer">NerdOffice</a>
             </li>
             <li>
                 <a href="">NerdPlayer</a>
