--- a/src/app/header-components/nerdoffice/nerdoffice.component.css
+++ b/src/app/header-components/nerdoffice/nerdoffice.component.css
@@ -21,7 +21,7 @@ main {
 }
 
 .title>h1 {
-    color: rgba(0, 0, 0, 0.727);
+    color: black;
     font-weight: 900;
     font-size: 2.8rem;
 }
@@ -77,11 +77,7 @@ main {
     background-color: white;
     border: none;
     width: 530px;
-}
-
-.picture {
-    max-width: 600px;
-    border-radius: 5px;
+    padding: 10px;
 }
 
 .card-content h4 {
@@ -92,15 +88,6 @@ main {
 .card-content h3 {
     font-size: 1.8rem;
     font-weight: 500;
-}
-
-
-/*Midle Content*/
-
-.middle-content {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
 }
 
 .content-news2 {
@@ -116,17 +103,38 @@ main {
     margin-left: 10px;
 }
 
+.content-news2 h1 {
+    margin-top: 20px;
+    font-weight: bold;
+    text-decoration: 2px underline;
+    color: rgb(75, 218, 203);
+}
+
 .content-news2 h2 {
     margin-top: 20px;
 }
 
 .middle-content>.card {
-    width: 400px;
+    width: 600px;
     padding: 20px 10px 0px 0px;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
 }
 
 .middle-content>.card>img {
+    width: 400px;
+    height: 200px;
     border-radius: 8px;
+}
+
+.middle-content .card-content {
+    margin-left: 20px;
+}
+
+.card-content h3 {
+    font-size: 1.5rem;
+    font-weight: 500;
 }
 
 
