--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -53,4 +53,35 @@
             </ul>
         </nav>
     </section>
+
+    <section class="nav-content menu">
+        <nav class="nav-bar">
+            <ul>
+                <li><a class="nerdb" disable>Menu<i style="vertical-align: middle;"
+              class="material-icons">arrow_drop_down</i></a>
+                    <ul>
+                        <li>
+                            <a routerLink="nerdCast">NerdCast</a>
+                        </li>
+                        <li>
+                            <a routerLink="nerdOffcer">NerdOffice</a>
+                        </li>
+                        <li>
+                            <a href="">NerdPlayer</a>
+                        </li>
+                        <li>
+                            <a href="">Mais</a>
+                        </li>
+                        <li>
+                            <a href="">Nerdstore</a>
+                        </li>
+                        <li>
+                            <a href="">Anuncie</a>
+                        </li>
+                    </ul>
+                </li>
+
+            </ul>
+        </nav>
+    </section>
 </body>
