'updates-new-component'

--- a/src/app/header-components/nerdcast/nerdcast.component.html
+++ b/src/app/header-components/nerdcast/nerdcast.component.html
@@ -14,14 +14,17 @@
 
             <h2>Últimos episódios</h2>
             <section class="content-top">
+
                 <div class="content-news1 n1">
                     <div class="card">
                         <img class="picture" src="assets\nerdCast\cantar-cast.jpg" alt="imagem-cantando">
                         <div class="card-content">
                             <h4>Caneca de Mamicas 29</h4>
-                            <h3>
-                                Vale a pena cantar de novo
-                            </h3>
+                            <a href="#">
+                                <h3>
+                                    Vale a pena cantar de novo
+                                </h3>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -31,9 +34,11 @@
                         <img class="picture" src="assets\nerdCast\arcane-cast.png" alt="">
                         <div class="card-content">
                             <h4>Lá do Bunker 17</h4>
-                            <h3>
-                                Não é defeito, é efeito
-                            </h3>
+                            <a href="#">
+                                <h3>
+                                    Não é defeito, é efeito
+                                </h3>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -43,9 +48,11 @@
                         <img class="picture" src="assets\nerdCast\eternos-cast.png" alt="">
                         <div class="card-content">
                             <h4>NerdCast 804</h4>
-                            <h3>
-                                Eternos e Shang-Chi: Imortais são babacas!
-                            </h3>
+                            <a href="#">
+                                <h3>
+                                    Eternos e Shang-Chi: Imortais são babacas!
+                                </h3>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -55,9 +62,11 @@
                         <img class="picture" src="assets\nerdCast\frases-cast.png" alt="">
                         <div class="card-content">
                             <h4>Speak English 45</h4>
-                            <h3>
-                                Frases Marcantes de Filmes e Séries em 2021
-                            </h3>
+                            <a href="#">
+                                <h3>
+                                    Frases Marcantes de Filmes e Séries em 2021
+                                </h3>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -72,7 +81,9 @@
                             <img src="assets\nerdCast\cthulhu-cast.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4>2017 - 2020</h4>
-                                <h3>Cthulhu</h3>
+                                <a href="#">
+                                    <h3>Cthulhu</h3>
+                                </a>
                                 <p>Estamos em 1936 e uma confraria de amigos, veteranos da Primeira Guerra Mundial, se reúne mais uma vez só que dessa vez a confraternização tomou rumos inesperados e muito sinistros. (Arte da Vitrine: Marcelo Silva)</p>
                             </div>
                         </div>
@@ -81,7 +92,9 @@
                             <img src="assets\nerdCast\cyberpunk-cast.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4>2013 - 2016</h4>
-                                <h3>Cyberpunk</h3>
+                                <a href="#">
+                                    <h3>Cyberpunk</h3>
+                                </a>
                                 <p>Conheça o grupo de mercenários mais esculhambados de Delta City, enquanto planejam um grande assalto que poderá ser seu último serviço! No bom ou no mal sentido! (Arte da Vitrine: Felipe Massafera)</p>
                             </div>
                         </div>
@@ -90,7 +103,9 @@
                             <img src="assets\nerdCast\medieval-cast.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4>2011 - 2012</h4>
-                                <h3>Medieval</h3>
+                                <a href="#">
+                                    <h3>Medieval</h3>
+                                </a>
                                 <p>Embarque nas desventuras do grupo mais desajustado do mundo do RPG, enquanto eles tentam enganar um rei e um desconfiado duque de que foram bem sucedidos ao resgatar a princesa Irulan. (Arte da Vitrine: Andres Ramos)</p>
                             </div>
                         </div>
