--- a/src/app/header-components/nerdoffice/nerdoffice.component.html
+++ b/src/app/header-components/nerdoffice/nerdoffice.component.html
@@ -1,5 +1,4 @@
 <body class="global">
-
     <main>
 
         <section class="body-content">
@@ -19,9 +18,11 @@
                         <img class="picture" src="assets\nerdOfficer\img1.jpg" alt=" imagem-cantando">
                         <div class="card-content">
                             <h4>NerdOffice S12E45</h4>
-                            <h3>
-                                Ghostbusters: Mais Além – Não pensa no Stay Puff que ele aparece! (Trailer Oficial)
-                            </h3>
+                            <a href="#">
+                                <h3>
+                                    Ghostbusters: Mais Além – Não pensa no Stay Puff que ele aparece! (Trailer Oficial)
+                                </h3>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -31,9 +32,11 @@
                         <img class="picture" src="assets\nerdOfficer\img2.jpg" alt="">
                         <div class="card-content">
                             <h4>NerdOffice S12E44</h4>
-                            <h3>
-                                Tiger King 2: Uma série de Tarantino! (Trailer Oficial)
-                            </h3>
+                            <a href="#">
+                                <h3>
+                                    Tiger King 2: Uma série de Tarantino! (Trailer Oficial)
+                                </h3>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -49,7 +52,9 @@
                             <img src="assets\nerdOfficer\he-man.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4> NerdOffice S12E43</h4>
-                                <h3>Trailer: He-Man é nosso lugar seguro!</h3>
+                                <a href="#">
+                                    <h3>Trailer: He-Man é nosso lugar seguro!</h3>
+                                </a>
                             </div>
                         </div>
 
@@ -57,7 +62,9 @@
                             <img src="assets\nerdOfficer\tv-face.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4>NerdOffice S12E42</h4>
-                                <h3>Você está assistindo TV errado?</h3>
+                                <a href="#">
+                                    <h3>Você está assistindo TV errado?</h3>
+                                </a>
                             </div>
                         </div>
 
@@ -65,7 +72,9 @@
                             <img src="assets\nerdOfficer\joven-batman.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4>NerdOffice S12E41</h4>
-                                <h3>The Batman: Vingança servida quente! (Trailer Oficial)</h3>
+                                <a href="#">
+                                    <h3>The Batman: Vingança servida quente! (Trailer Oficial)</h3>
+                                </a>
                             </div>
                         </div>
 
@@ -73,7 +82,9 @@
                             <img src="assets\nerdOfficer\league-nerd.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4>NerdOffice S12E39</h4>
-                                <h3>Trailer League of Legends: Arcane – BUNITO demais!</h3>
+                                <a href="#">
+                                    <h3>Trailer League of Legends: Arcane – BUNITO demais!</h3>
+                                </a>
                             </div>
                         </div>
 
