--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,16 +9,13 @@
                 <a routerLink="nerdOffcer">NerdOffice</a>
             </li>
             <li>
-                <a href="">NerdPlayer</a>
+                <a routerLink="nerdPlayer">NerdPlayer</a>
             </li>
             <li>
-                <a href="">Mais</a>
+                <a href="#">Nerdstore</a>
             </li>
             <li>
-                <a href="">Nerdstore</a>
-            </li>
-            <li>
-                <a href="">Anuncie</a>
+                <a href="#">Anuncie</a>
             </li>
         </ul>
         <div class="search">
@@ -41,7 +38,8 @@
                 Séries e TV</a></li>
                         <li><a class="dropdown dd4"><i style="vertical-align: middle;" class="material-icons">circle</i>
                 Animes e Mangás</a></li>
-                        <li><a class="dropdown dd5"><i style="vertical-align: middle;" class="material-icons">circle</i> HQs e
+                        <li><a class="dropdown dd5"><i style="vertical-align: middle;" class="material-icons">circle</i>
+                HQs e
                 Livros</a></li>
                     </ul>
                 </li>
@@ -67,16 +65,13 @@
                             <a routerLink="nerdOffcer">NerdOffice</a>
                         </li>
                         <li>
-                            <a href="">NerdPlayer</a>
+                            <a routerLink="nerdPlayer">NerdPlayer</a>
                         </li>
                         <li>
-                            <a href="">Mais</a>
+                            <a href="#">Nerdstore</a>
                         </li>
                         <li>
-                            <a href="">Nerdstore</a>
-                        </li>
-                        <li>
-                            <a href="">Anuncie</a>
+                            <a href="#">Anuncie</a>
                         </li>
                     </ul>
                 </li>
