--- a/src/app/template/home/home.component.html
+++ b/src/app/template/home/home.component.html
@@ -10,9 +10,11 @@
                         <img class="picture" src="assets\marvel-image-news\eternos-shang-chi.png" alt="shang chi e eternos">
                         <div class="card-content">
                             <h4>NERDCAST</h4>
-                            <h3>
-                                Eternos e Shang-Chi: Imortais são babacas!
-                            </h3>
+                            <a href="#">
+                                <h3>
+                                    Eternos e Shang-Chi: Imortais são babacas!
+                                </h3>
+                            </a>
                         </div>
                     </div>
 
@@ -24,9 +26,11 @@
                         <img class="picture" src="assets\sony-image-news\playstation.jpg" alt="">
                         <div class="card-content">
                             <h4>AUMENTO DE VALOR</h4>
-                            <h3>
-                                Sony confirma reajuste de preço do PlayStation 5 no Brasil
-                            </h3>
+                            <a href="#">
+                                <h3>
+                                    Sony confirma reajuste de preço do PlayStation 5 no Brasil
+                                </h3>
+                            </a>
                         </div>
                     </div>
 
@@ -45,7 +49,9 @@
                             <img src="assets\img\news1.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4>HISTÓRIA SENSÍVEL</h4>
-                                <h3>Tamo Junto é uma animação brasileira sobre a pandemia</h3>
+                                <a href="#">
+                                    <h3>Tamo Junto é uma animação brasileira sobre a pandemia</h3>
+                                </a>
                             </div>
                         </div>
 
@@ -53,7 +59,9 @@
                             <img src="assets\img\news2.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4>PAPEL NÃO FOI CONFIRMADO</h4>
-                                <h3>Delroy Lindo entra para o elenco de Blade</h3>
+                                <a href="#">
+                                    <h3>Delroy Lindo entra para o elenco de Blade</h3>
+                                </a>
                             </div>
                         </div>
 
@@ -61,7 +69,9 @@
                             <img src="assets\img\news3.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4>POTÊNCIA CINEMATOGRÁFICA</h4>
-                                <h3>Você sabe o que é Nollywood?</h3>
+                                <a href="#">
+                                    <h3>Você sabe o que é Nollywood?</h3>
+                                </a>
                             </div>
                         </div>
 
@@ -69,8 +79,10 @@
                             <img src="assets\img\news4.jpg" alt="imagem-noticia">
                             <div class="card-content">
                                 <h4 style="color: rgb(157, 81, 228);">PURA FOFURA</h4>
-                                <h3>Assista ao especial de Cowboy Bebop com erros de gravação do Ein
-                                </h3>
+                                <a href="#">
+                                    <h3>Assista ao especial de Cowboy Bebop com erros de gravação do Ein
+                                    </h3>
+                                </a>
                             </div>
                         </div>
 
