--- a/src/app/header-components/nerdoffice/nerdoffice.component.css
+++ b/src/app/header-components/nerdoffice/nerdoffice.component.css
@@ -5,6 +5,11 @@ main {
     background-color: rgb(38, 39, 46);
 }
 
+a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.878);
+}
+
 .body-content {
     padding: 30px;
     margin-top: 100px;
@@ -21,7 +26,7 @@ main {
 }
 
 .title>h1 {
-    color: black;
+    color: rgb(73, 71, 71);
     font-weight: 900;
     font-size: 2.8rem;
 }
