--- a/src/app/template/home/home.component.css
+++ b/src/app/template/home/home.component.css
@@ -13,6 +13,11 @@ main {
     background-color: rgb(38, 39, 46);
 }
 
+a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.878);
+}
+
 .body-content {
     margin-top: 100px;
     width: 1100px;
