add-lazy-loading

--- a/src/app/header-components/nerdoffice/nerdoffice.component.html
+++ b/src/app/header-components/nerdoffice/nerdoffice.component.html
@@ -13,7 +13,7 @@
 
             <section class="content-top">
 
-                <div class="content-news1 n1">
+                <div class="content-news1">
                     <div class="card">
                         <img class="picture" src="assets\nerdOfficer\img1.jpg" alt=" imagem-cantando">
                         <div class="card-content">
