--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,13 +3,13 @@
         <a routerLink="/"><img class="logo" src="assets\img\logo.png" alt=""></a>
         <ul>
             <li>
-                <a routerLink="nerdCast">NerdCast</a>
+                <a routerLink="lazy/nerdCast">NerdCast</a>
             </li>
             <li>
-                <a routerLink="nerdOffcer">NerdOffice</a>
+                <a routerLink="lazy/nerdOffcer">NerdOffice</a>
             </li>
             <li>
-                <a routerLink="nerdPlayer">NerdPlayer</a>
+                <a routerLink="lazy/nerdPlayer">NerdPlayer</a>
             </li>
             <li>
                 <a href="#">Nerdstore</a>
@@ -59,13 +59,13 @@
               class="material-icons">arrow_drop_down</i></a>
                     <ul>
                         <li>
-                            <a routerLink="nerdCast">NerdCast</a>
+                            <a routerLink="lazy/nerdCast">NerdCast</a>
                         </li>
                         <li>
-                            <a routerLink="nerdOffcer">NerdOffice</a>
+                            <a routerLink="lazy/nerdOffcer">NerdOffice</a>
                         </li>
                         <li>
-                            <a routerLink="nerdPlayer">NerdPlayer</a>
+                            <a routerLink="lazy/nerdPlayer">NerdPlayer</a>
                         </li>
                         <li>
                             <a href="#">Nerdstore</a>
