--- a/src/app/header-components/nerdcast/nerdcast.component.html
+++ b/src/app/header-components/nerdcast/nerdcast.component.html
@@ -15,7 +15,7 @@
             <h2>Últimos episódios</h2>
             <section class="content-top">
 
-                <div class="content-news1 n1">
+                <div class="content-news1">
                     <div class="card">
                         <img class="picture" src="assets\nerdCast\cantar-cast.jpg" alt="imagem-cantando">
                         <div class="card-content">
